<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:orientation="vertical"
            android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/frinedName_addfriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:padding="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/codechef_addFriend_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codechef_handle"
            android:padding="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/codeforces_addFriend_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codeforces_handle"
            android:padding="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/spoj_addFriend_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/spoj_handle"
            android:padding="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/hackerRank_addFriend_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hackerrank_handle"
            android:padding="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/hackerEarth_addFriend_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hackerearth_handle"
            android:padding="10dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/submit_addFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/submit"/>

    </LinearLayout>
</ScrollView>